--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -81,7 +81,8 @@
     font-family: font-serif
     font-size: 1.4em
     margin: line-height 20px
-    text-align: center
+    padding-left: 8px
+    border-left: 3px solid
     footer
       font-size: font-size
       margin: line-height 0
